<?xml version="1.0"?>
<package format="2">
  <name>kobukiROSindigo</name>
  <version>0.1.0</version>
  <description>Kobuki robot code for Indigo ROS</description>

  <maintainer email="agneses92@hotmail.it">Agnese Salutari</maintainer>
  <license>BSD</license>
  <author email="agneses92@hotmail.it">Agnese Salutari</author>
  
  <!-- Needed for message management -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- /Needed for message management -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
